@@ -1,3 +1,9 @@
+2004/05/31 23:10 (+0200) kaffeetisch
+
+	* GObject.xs (CLONE): Remove unused variable.
+
+	* GType.xs: Document the interfaces keyword of register_object.
+
 2004/05/31 15:11 (-0400) rwmcfa1
 
 	* GenPod.pm: reworked flags/enums code, added autodetection based on
